i am stuck, i have to think about the step implementation, fixed snackbar

--- a/stylesheets/DragableContainer.css
+++ b/stylesheets/DragableContainer.css
@@ -30,13 +30,13 @@
 }
 
 #dragable_container_manual {
-    top: 458px;
+    /*top: 458px;*/
     left: 16px;
 }
 
 #dragable_container_step {
-    top: 458px;
-    left: 454px;
+    /*top: 458px;*/
+    left: 950px;
 }
 
 #dragable_container_step_content {
